bindings/go/ffi/slatedb.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiCallbackInterfaceFree)(uint64_t handle);
typedef void (*UniffiCallbackInterfaceFfiLogCallbackMethod0)(uint64_t uniffi_handle, RustBuffer record, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceFfiMergeOperatorMethod0)(uint64_t uniffi_handle, RustBuffer key, RustBuffer existing_value, RustBuffer operand, RustBuffer* uniffi_out_return, RustCallStatus* callStatus );
typedef struct UniffiVTableCallbackInterfaceFfiLogCallback {
    UniffiCallbackInterfaceFfiLogCallbackMethod0 log;
    UniffiCallbackInterfaceFree uniffiFree;
} UniffiVTableCallbackInterfaceFfiLogCallback;
typedef struct UniffiVTableCallbackInterfaceFfiMergeOperator {
    UniffiCallbackInterfaceFfiMergeOperatorMethod0 merge;
    UniffiCallbackInterfaceFree uniffiFree;
} UniffiVTableCallbackInterfaceFfiMergeOperator;
void* uniffi_slatedb_ffi_fn_clone_ffidb(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffidb(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_begin(void* ptr, RustBuffer isolation_level
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_delete(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_delete_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_flush(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_flush_with_options(void* ptr, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_get_key_value(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_get_key_value_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_merge(void* ptr, RustBuffer key, RustBuffer operand
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_merge_with_options(void* ptr, RustBuffer key, RustBuffer operand, RustBuffer merge_options, RustBuffer write_options
);
RustBuffer uniffi_slatedb_ffi_fn_method_ffidb_metrics(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_put(void* ptr, RustBuffer key, RustBuffer value
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_put_with_options(void* ptr, RustBuffer key, RustBuffer value, RustBuffer put_options, RustBuffer write_options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_shutdown(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_snapshot(void* ptr
);
void uniffi_slatedb_ffi_fn_method_ffidb_status(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_write(void* ptr, void* batch
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidb_write_with_options(void* ptr, void* batch, RustBuffer options
);
void* uniffi_slatedb_ffi_fn_clone_ffidbbuilder(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffidbbuilder(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffidbbuilder_new(RustBuffer path, void* object_store, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbbuilder_build(void* ptr
);
void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_db_cache_disabled(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_merge_operator(void* ptr, void* merge_operator, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_seed(void* ptr, uint64_t seed, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_settings(void* ptr, void* settings, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_sst_block_size(void* ptr, RustBuffer sst_block_size, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_wal_object_store(void* ptr, void* wal_object_store, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffidbiterator(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffidbiterator(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbiterator_next(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbiterator_seek(void* ptr, RustBuffer key
);
void* uniffi_slatedb_ffi_fn_clone_ffidbreader(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffidbreader(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbreader_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbreader_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbreader_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbreader_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbreader_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbreader_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbreader_shutdown(void* ptr
);
void* uniffi_slatedb_ffi_fn_clone_ffidbreaderbuilder(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffidbreaderbuilder(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_ffidbreaderbuilder_new(RustBuffer path, void* object_store, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_build(void* ptr
);
void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_checkpoint_id(void* ptr, RustBuffer checkpoint_id, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_merge_operator(void* ptr, void* merge_operator, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_options(void* ptr, RustBuffer options, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_wal_object_store(void* ptr, void* wal_object_store, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffidbsnapshot(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffidbsnapshot(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
void* uniffi_slatedb_ffi_fn_clone_ffidbtransaction(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffidbtransaction(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit_with_options(void* ptr, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_delete(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
RustBuffer uniffi_slatedb_ffi_fn_method_ffidbtransaction_id(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_mark_read(void* ptr, RustBuffer keys
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge(void* ptr, RustBuffer key, RustBuffer operand
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge_with_options(void* ptr, RustBuffer key, RustBuffer operand, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_put(void* ptr, RustBuffer key, RustBuffer value
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_put_with_options(void* ptr, RustBuffer key, RustBuffer value, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_rollback(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_seqnum(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_ffidbtransaction_unmark_write(void* ptr, RustBuffer keys
);
void* uniffi_slatedb_ffi_fn_clone_ffilogcallback(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffilogcallback(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_init_callback_vtable_ffilogcallback(UniffiVTableCallbackInterfaceFfiLogCallback* vtable
);
void uniffi_slatedb_ffi_fn_method_ffilogcallback_log(void* ptr, RustBuffer record, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_ffimergeoperator(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_ffimergeoperator(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_init_callback_vtable_ffimergeoperator(UniffiVTableCallbackInterfaceFfiMergeOperator* vtable
);