bindings/java/src/main/java/io/slatedb/jna/ffi/UniffiLib.java

package io.slatedb.jna.ffi;

import com.sun.jna.Library;
import com.sun.jna.Pointer;

// A JNA Library to expose the extern-C FFI definitions.
// This is an implementation detail which will be called internally by the public API.
interface UniffiLib extends Library {
  UniffiLib INSTANCE = UniffiLibInitializer.load();

  // The Cleaner for the whole library
  static UniffiCleaner CLEANER = UniffiCleaner.create();

  Pointer uniffi_slatedb_ffi_fn_clone_ffidb(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffidb(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidb_begin(Pointer ptr, RustBuffer.ByValue isolationLevel);

  Long uniffi_slatedb_ffi_fn_method_ffidb_delete(Pointer ptr, RustBuffer.ByValue key);

  Long uniffi_slatedb_ffi_fn_method_ffidb_delete_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidb_flush(Pointer ptr);

  Long uniffi_slatedb_ffi_fn_method_ffidb_flush_with_options(
      Pointer ptr, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidb_get(Pointer ptr, RustBuffer.ByValue key);

  Long uniffi_slatedb_ffi_fn_method_ffidb_get_key_value(Pointer ptr, RustBuffer.ByValue key);

  Long uniffi_slatedb_ffi_fn_method_ffidb_get_key_value_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidb_get_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidb_merge(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue operand);

  Long uniffi_slatedb_ffi_fn_method_ffidb_merge_with_options(
      Pointer ptr,
      RustBuffer.ByValue key,
      RustBuffer.ByValue operand,
      RustBuffer.ByValue mergeOptions,
      RustBuffer.ByValue writeOptions);

  RustBuffer.ByValue uniffi_slatedb_ffi_fn_method_ffidb_metrics(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidb_put(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue value);

  Long uniffi_slatedb_ffi_fn_method_ffidb_put_with_options(
      Pointer ptr,
      RustBuffer.ByValue key,
      RustBuffer.ByValue value,
      RustBuffer.ByValue putOptions,
      RustBuffer.ByValue writeOptions);

  Long uniffi_slatedb_ffi_fn_method_ffidb_scan(Pointer ptr, RustBuffer.ByValue range);

  Long uniffi_slatedb_ffi_fn_method_ffidb_scan_prefix(Pointer ptr, RustBuffer.ByValue prefix);

  Long uniffi_slatedb_ffi_fn_method_ffidb_scan_prefix_with_options(
      Pointer ptr, RustBuffer.ByValue prefix, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidb_scan_with_options(
      Pointer ptr, RustBuffer.ByValue range, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidb_shutdown(Pointer ptr);

  Long uniffi_slatedb_ffi_fn_method_ffidb_snapshot(Pointer ptr);

  void uniffi_slatedb_ffi_fn_method_ffidb_status(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidb_write(Pointer ptr, Pointer batch);

  Long uniffi_slatedb_ffi_fn_method_ffidb_write_with_options(
      Pointer ptr, Pointer batch, RustBuffer.ByValue options);

  Pointer uniffi_slatedb_ffi_fn_clone_ffidbbuilder(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffidbbuilder(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffidbbuilder_new(
      RustBuffer.ByValue path, Pointer objectStore, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidbbuilder_build(Pointer ptr);

  void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_db_cache_disabled(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_merge_operator(
      Pointer ptr, Pointer mergeOperator, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_seed(
      Pointer ptr, Long seed, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_settings(
      Pointer ptr, Pointer settings, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_sst_block_size(
      Pointer ptr, RustBuffer.ByValue sstBlockSize, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffidbbuilder_with_wal_object_store(
      Pointer ptr, Pointer walObjectStore, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_clone_ffidbiterator(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffidbiterator(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidbiterator_next(Pointer ptr);

  Long uniffi_slatedb_ffi_fn_method_ffidbiterator_seek(Pointer ptr, RustBuffer.ByValue key);

  Pointer uniffi_slatedb_ffi_fn_clone_ffidbreader(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffidbreader(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidbreader_get(Pointer ptr, RustBuffer.ByValue key);

  Long uniffi_slatedb_ffi_fn_method_ffidbreader_get_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbreader_scan(Pointer ptr, RustBuffer.ByValue range);

  Long uniffi_slatedb_ffi_fn_method_ffidbreader_scan_prefix(Pointer ptr, RustBuffer.ByValue prefix);

  Long uniffi_slatedb_ffi_fn_method_ffidbreader_scan_prefix_with_options(
      Pointer ptr, RustBuffer.ByValue prefix, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbreader_scan_with_options(
      Pointer ptr, RustBuffer.ByValue range, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbreader_shutdown(Pointer ptr);

  Pointer uniffi_slatedb_ffi_fn_clone_ffidbreaderbuilder(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffidbreaderbuilder(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_constructor_ffidbreaderbuilder_new(
      RustBuffer.ByValue path, Pointer objectStore, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_build(Pointer ptr);

  void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_checkpoint_id(
      Pointer ptr, RustBuffer.ByValue checkpointId, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_merge_operator(
      Pointer ptr, Pointer mergeOperator, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_options(
      Pointer ptr, RustBuffer.ByValue options, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_method_ffidbreaderbuilder_with_wal_object_store(
      Pointer ptr, Pointer walObjectStore, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_clone_ffidbsnapshot(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffidbsnapshot(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get(Pointer ptr, RustBuffer.ByValue key);

  Long uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value(
      Pointer ptr, RustBuffer.ByValue key);

  Long uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_key_value_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbsnapshot_get_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan(Pointer ptr, RustBuffer.ByValue range);

  Long uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix(
      Pointer ptr, RustBuffer.ByValue prefix);

  Long uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_prefix_with_options(
      Pointer ptr, RustBuffer.ByValue prefix, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbsnapshot_scan_with_options(
      Pointer ptr, RustBuffer.ByValue range, RustBuffer.ByValue options);

  Pointer uniffi_slatedb_ffi_fn_clone_ffidbtransaction(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffidbtransaction(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit(Pointer ptr);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_commit_with_options(
      Pointer ptr, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_delete(Pointer ptr, RustBuffer.ByValue key);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_get(Pointer ptr, RustBuffer.ByValue key);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value(
      Pointer ptr, RustBuffer.ByValue key);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_key_value_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_get_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);

  RustBuffer.ByValue uniffi_slatedb_ffi_fn_method_ffidbtransaction_id(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_mark_read(
      Pointer ptr, RustBuffer.ByValue keys);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue operand);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_merge_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue operand, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_put(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue value);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_put_with_options(
      Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue value, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_rollback(Pointer ptr);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan(Pointer ptr, RustBuffer.ByValue range);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix(
      Pointer ptr, RustBuffer.ByValue prefix);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_prefix_with_options(
      Pointer ptr, RustBuffer.ByValue prefix, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_scan_with_options(
      Pointer ptr, RustBuffer.ByValue range, RustBuffer.ByValue options);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_seqnum(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  Long uniffi_slatedb_ffi_fn_method_ffidbtransaction_unmark_write(
      Pointer ptr, RustBuffer.ByValue keys);

  Pointer uniffi_slatedb_ffi_fn_clone_ffilogcallback(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffilogcallback(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_init_callback_vtable_ffilogcallback(
      UniffiVTableCallbackInterfaceFfiLogCallback vtable);

  void uniffi_slatedb_ffi_fn_method_ffilogcallback_log(
      Pointer ptr, RustBuffer.ByValue record, UniffiRustCallStatus uniffi_out_errmk);

  Pointer uniffi_slatedb_ffi_fn_clone_ffimergeoperator(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_free_ffimergeoperator(
      Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);

  void uniffi_slatedb_ffi_fn_init_callback_vtable_ffimergeoperator(
      UniffiVTableCallbackInterfaceFfiMergeOperator vtable);
